# FileSend

./: CMakeLists.txt  ClientFTP.cpp  MyTask.txt  README.md  ServerFTP.cpp  bitCount.cpp  comb1.cpp  comb2.cpp  comb3.cpp  reverseString.cpp  riddle.cpp  serverFTP.cpp  solver.cpp
client/: CMakeLists.txt  main.cpp
server/: CMakeLists.txt  ClientList.cpp  ClientList.h  FakeConnection.cpp  FakeConnection.h  FileList.cpp  FileList.h  FileStorage.cpp  FileStorage.h  main.cpp  main.qml
